--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+	"path to artisan (for dev mode)": "C:\\MyPrograms\\EasyPHP-DevServer-14.1VC11\\data\\localweb\\projects\\ibsurvey\\",
 	"name": "laravel/laravel",
 	"description": "The Laravel Framework.",
 	"keywords": ["framework", "laravel"],
@@ -20,15 +21,15 @@
 	},
 	"scripts": {
 		"post-install-cmd": [
-			"php C:\\MyPrograms\\EasyPHP-DevServer-14.1VC11\\data\\localweb\\projects\\ibsurvey\\artisan clear-compiled",
-			"php C:\\MyPrograms\\EasyPHP-DevServer-14.1VC11\\data\\localweb\\projects\\ibsurvey\\artisan optimize"
+			"php artisan clear-compiled",
+			"php artisan optimize"
 		],
 		"post-update-cmd": [
-			"php C:\\MyPrograms\\EasyPHP-DevServer-14.1VC11\\data\\localweb\\projects\\ibsurvey\\artisan clear-compiled",
-			"php C:\\MyPrograms\\EasyPHP-DevServer-14.1VC11\\data\\localweb\\projects\\ibsurvey\\artisan optimize"
+			"php artisan clear-compiled",
+			"php artisan optimize"
 		],
 		"post-create-project-cmd": [
-			"php C:\\MyPrograms\\EasyPHP-DevServer-14.1VC11\\data\\localweb\\projects\\ibsurvey\\artisan key:generate"
+			"php artisan key:generate"
 		]
 	},
 	"config": {
