--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "4.2.*",
+		"greggilbert/recaptcha": "dev-master",
 		"fideloper/proxy": "dev-master"
 	},
 	"autoload": {
